--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -53,10 +53,7 @@ $width: 33.3%;
 
           &:hover {
             .over-article-container {
-              transform: translateY(0);
-              left: 0px;
-              top: 0px;
-              border-radius: 0;
+              display: block;
             }
           }
 
@@ -101,7 +98,7 @@ $width: 33.3%;
             z-index: 2;
             transition: all 0.4s;
             transform-origin: 0 0;
-            transform: translateY(-100%);
+            display: none;
 
             .over-article-wrapper {
               position: relative;
